<resources>
    <string name="app_name">Chipbox</string>

    <string name="error_cta_dismiss">Dismiss</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer
    </string>

    <string name="back_button">Back Button</string>

    <string name="error_scanning_wait">Please wait, scanning…</string>

    <string name="permission_cta">Grant</string>
    <string name="permission_storage_explanation">Without storage access permission, Chipbox cannot scan or access tracks.</string>
    <string name="permission_general_explanation">Please grant this permission in order to use Chipbox.</string>
    <string name="permission_general_permanent">"Please grant this permission in your device's settings in order to use Chipbox."</string>

    <!-- Main Screen -->
    <string name="drawer_add_folder">Add to Library</string>
    <string name="drawer_refresh">Rescan Library</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_debug">Debug Settings</string>
    <string name="drawer_help">Help</string>

    <string name="tab_main_game">Game</string>
    <string name="tab_main_system">System</string>
    <string name="tab_main_artist">Artist</string>
    <string name="tab_main_tracks">Tracks</string>

    <string name="platform_name_genesis">Sega Genesis</string>
    <string name="platform_name_32x">Sega 32X</string>
    <string name="platform_name_snes">Super NES</string>
    <string name="platform_name_nes">NES</string>
    <string name="platform_name_gameboy">Game Boy</string>
    <string name="platform_name_other">Other</string>

    <!-- Player Screen-->
    <string name="cont_desc_player_album_art">Album Art</string>
    <string name="cont_desc_player_repeat">Repeat</string>
    <string name="cont_desc_player_previous">Previous</string>
    <string name="cont_desc_player_play">Play</string>
    <string name="cont_desc_player_next">Next</string>
    <string name="cont_desc_player_shuffle">Shuffle</string>

    <!-- File List Screen-->
    <string name="file_list_title">Add to Library</string>
    <string name="file_list_up">Up One Level</string>

    <string name="file_list_snackbar_rescan">Rescan</string>

    <string name="file_list_error_no_parent">"There's no folder above this one."</string>
    <string name="file_list_error_no_root_allowed">"Choose a folder to scan."</string>
    <string name="file_list_error_exists">This folder is already in your library. Did you want to rescan?</string>
    <string name="file_list_error_empty_folder">That folder is empty.</string>
    <string name="file_list_error_invalid_track">That file is not a valid track.</string>
    <string name="file_list_error_adding">There was an error adding that directory to your library.</string>

    <!-- Notification -->
    <string name="notification_label_pause">Pause</string>
    <string name="notification_label_play">Play</string>
    <string name="notification_label_prev">Previous Track</string>
    <string name="notification_label_next">Next Track</string>
    <string name="notification_label_stop">Stop Playback</string>


    <!-- Scanning-->
    <string name="scan_status_scanning">Scanning Library…</string>
    <string name="scan_status_new_track">Added track: %s</string>
    <string name="scan_status_updated_track">Updated track: %s</string>
    <string name="scan_status_removed_track">Removed track: %s</string>
    <string name="scan_status_folder">Scanning folder: %s</string>
    <string name="scan_status_no_track_yet">Looking for tracks…</string>
    <string name="scan_status_complete">Complete!</string>
    <string name="scan_status_success_new_tracks">Added %d tracks to your library</string>
    <string name="scan_status_success_no_change">Your library is up to date</string>
    <string name="scan_status_success_updated_tracks">Updated %d tracks</string>
    <string name="scan_status_success_new_and_updated_tracks">Added %1$d tracks, and updated %2$d</string>
    <string name="scan_status_failed">Failed!</string>
    <string name="scan_heading_folder">Current Folder</string>
    <string name="scan_heading_file">Last File Added</string>
    <string name="scan_label_files_added_count">Tracks Added</string>
    <string name="scan_label_bad_file_count">Unreadable Files</string>

    <string name="notification_scan_failed_title">Chipbox Library</string>
    <string name="notification_scan_failed_content">There was a problem scanning your library.</string>

    <!-- Settings -->
    <string name="title_settings">Playback Settings</string>
    <string name="label_tempo">Tempo</string>

    <!-- Empty States -->
    <string name="empty_state">Your library is empty.\n Get some tracks, then…</string>
    <string name="button_empty_state">Scan Library</string>

    <!-- Onboarding -->

    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_add">Add Now</string>

    <string name="onboarding_title_title">Chiptunes on your phone</string>
    <string name="onboarding_title_detail">Listen to your favorite video game music. No internet connection required.</string>

    <string name="onboarding_library_title">Add tracks to your library</string>
    <string name="onboarding_library_detail">Put tracks into folders by game, album art optional. Then scan in Chipbox!</string>

    <!-- TODO Move to debug resources -->
    <!-- Debug Strings-->
    <string name="title_debug">Debug Settings</string>
    <string name="debug_label_buffer_bytes">Bytes Per Buffer</string>
    <string name="debug_label_buffer_count">Buffer Count</string>
    <string name="debug_label_latency_minimum">Minimum Latency</string>
    <string name="debug_label_latency_actual">Actual Latency</string>
    <string name="debug_label_latency_total">Total Buffer Size</string>
    <string name="debug_label_sample_rate">Sample Rate</string>

    <string name="debug_value_latency">%d ms</string>
    <string name="debug_value_sample_rate">%d Hz</string>
</resources>
