<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="?attr/selectableItemBackground"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_label_buffer_bytes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:text="@string/debug_label_buffer_bytes"/>

        <Spinner
            android:id="@+id/spinner_buffer_bytes"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:background="?attr/selectableItemBackground"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_label_buffer_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:text="@string/debug_label_buffer_count"/>

        <Spinner
            android:id="@+id/spinner_buffer_count"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="?attr/selectableItemBackground"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_label_buffer_latency_minimum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:text="@string/debug_label_latency_minimum"/>

        <TextView
            android:id="@+id/text_buffer_latency_minimum"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            tools:text="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="?attr/selectableItemBackground"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_label_buffer_latency_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:text="@string/debug_label_latency_total"/>

        <TextView
            android:id="@+id/text_buffer_latency_total"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            tools:text="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="?attr/selectableItemBackground"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_label_buffer_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:text="@string/debug_label_sample_rate"/>

        <TextView
            android:id="@+id/text_sample_rate"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            tools:text="44100"
            />
    </LinearLayout>

</LinearLayout>