<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/layout_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:transitionName="background" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/button_repeat"
            style="@style/PlayerControlButton"
            android:contentDescription="@string/cont_desc_player_repeat"
            android:src="@drawable/ic_repeat_black_24dp"
            android:tint="@color/circle_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_skip_back"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageButton
            android:id="@+id/button_skip_back"
            style="@style/PlayerControlButton"
            android:contentDescription="@string/cont_desc_player_previous"
            android:src="@drawable/ic_skip_previous_black_24dp"
            android:tint="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_play"
            />

        <ImageButton
            android:id="@+id/button_play"
            style="@style/PlayerControlButton"
            android:layout_width="96dp"
            android:contentDescription="@string/cont_desc_player_play"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:tint="@color/accent"
            android:transitionName="button_play_pause"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageButton
            android:id="@+id/button_skip_forward"
            style="@style/PlayerControlButton"
            android:contentDescription="@string/cont_desc_player_next"
            android:src="@drawable/ic_skip_next_black_24dp"
            android:tint="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_play"
            />

        <ImageButton
            android:id="@+id/button_shuffle"
            style="@style/PlayerControlButton"
            android:contentDescription="@string/cont_desc_player_shuffle"
            android:src="@drawable/ic_shuffle_black_24dp"
            android:tint="@color/circle_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_skip_forward"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/text_track_elapsed"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_play"
            tools:text="2:56"/>

        <TextView
            android:id="@+id/text_track_length"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seek_playback_progress"
            app:layout_constraintBottom_toTopOf="@id/button_play"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="end"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            tools:text="5:12"/>

        <SeekBar
            android:id="@+id/seek_playback_progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="100"
            app:layout_constraintTop_toTopOf="@id/text_track_length"
            app:layout_constraintBottom_toBottomOf="@id/text_track_elapsed"
            app:layout_constraintStart_toEndOf="@id/text_track_elapsed"
            app:layout_constraintEnd_toStartOf="@id/text_track_length"/>

        <net.sigmabeta.chipbox.util.animation.CustomTextView
            android:id="@+id/text_playing_subtitle"
            android:transitionName="text_playing_subtitle"
            app:layout_constraintBottom_toTopOf="@id/text_track_elapsed"
            android:layout_marginBottom="@dimen/spacing_large"
            android:textSize="12sp"
            tools:text="Yasunori Shiono"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/PlayerText"/>

        <net.sigmabeta.chipbox.util.animation.CustomTextView
            android:id="@+id/text_game_title"
            app:layout_constraintBottom_toTopOf="@id/text_playing_subtitle"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="12sp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Lufia II: Rise of the Sinistrals"
            style="@style/PlayerText"/>

        <net.sigmabeta.chipbox.util.animation.CustomTextView
            android:id="@+id/text_playing_title"
            android:transitionName="text_playing_title"
            app:layout_constraintBottom_toTopOf="@id/text_game_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginEnd="64dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            tools:text="The Island in the Void"
            style="@style/PlayerText"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-28dp"
            android:layout_marginEnd="@dimen/spacing_large"
            android:src="@drawable/ic_queue_music_black_24dp"
            android:tint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_main"
            android:elevation="6dp"
            app:borderWidth="2dp"/>

        <ImageView
            android:id="@+id/image_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:contentDescription="@string/cont_desc_player_album_art"
            android:elevation="4dp"
            android:outlineProvider="bounds"
            android:scaleType="centerCrop"
            android:transitionName="image_playing_boxart"
            android:layout_marginBottom="@dimen/spacing_large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_playing_title"
            tools:src="@drawable/img_album_art_blank" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
